Change first letter to uppercase

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 			</div>
 			<div class="main-menu col-xs-10">
 				<ul>
-					<li><a href="#">cuisine</a></li>
-					<li><a href="#">salle de bain</a></li>
-					<li><a href="#">mobilier integre</a></li>
-					<li><a href="realization.html">realization</a></li>
+					<li><a href="#">Cuisine</a></li>
+					<li><a href="#">Salle de bain</a></li>
+					<li><a href="#">Mobilier integre</a></li>
+					<li><a href="realization.html">Realization</a></li>
 					<div class="search">
 						<img src="img/searchw.png">
 					</div>
